chore: update and populate node_modules dependencies
